# Agent-publisher

./: .env.example  .gitignore  BEAUTIFY_PIPELINE.md  BEAUTIFY_QUICK_REFERENCE.md  RECENT_IMPROVEMENTS.md  TEST_IMPROVEMENTS_ROADMAP.md  TEST_REPORT.md  agent-publisher.service.template  agent_publisher.db  alembic.ini  dev.sh  hunyuan.md  hunyuan_image.py  install.sh  pyproject.toml  readme.md  smoke.sh  update.sh
agent_publisher/: cli.py  config.py  database.py  main.py  scheduler.py  version.py
alembic/: env.py
docs/: INTEGRATION_ROADMAP_COMPLETE.md  PHASE_1_CODE_REVIEW.md  PHASE_1_DEPLOYMENT_CHECKLIST.md  PHASE_2_AI_ANALYSIS_INTEGRATION.md  PHASE_3_UNIFIED_MATERIAL_POOL.md  PHASE_4_MCP_TOOL_INTEGRATION.md  PHASE_5_MULTI_CHANNEL_PUBLISHING.md  PHASE_6_PRODUCTION_DEPLOYMENT.md  README.md  wechat-platform-setup.md  wechat-setup.md
scripts/: migrate_legacy_publish_relations.py
skills/: SKILL.md
tests/: conftest.py  test_api_integration.py  test_article_service_multi_account.py  test_auth_api.py  test_candidate_material_service.py  test_compat_regression.py  test_config.py  test_governance_service.py  test_image_service.py  test_llm_service.py  test_media_api.py  test_preferences_api.py  test_rss_service.py  test_skills_api.py  test_system_log_service.py  test_trendradar_adapter.py  test_trendradar_bridge.py  test_trendradar_hotspots_e2e.py  test_trendradar_integration_flow.py  test_video_extension.py  test_wechat_service.py  test_wechat_style_service.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  (+1 more)
(+750 files in other folders)
